# ROVI01

./: README.md  rwsettings.xml
final_project/Marker1/: CMakeLists.txt  extract_points.h  main.cpp  opencv_hough.cpp
final_project/Marker2/: CMakeLists.txt
final_project/Marker2/src/: functions.h  marker2.cpp
final_project/Plugin/output/: joint_1point.txt  joint_1point_fast_95.txt  joint_3points.txt  joint_3points_fast_1.txt  tool_pose_1point.txt  tool_pose_1point_fast_1.txt  tool_pose_1point_fast_95.txt  tool_pose_3points.txt  tracking_error_1point_fast_1.txt  tracking_error_1point_fast_95.txt  tracking_error_3points_fast_1.txt
final_project/Plugin/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  auxiliar_library.h
robotics/miniproject2/: CMakeLists.txt
robotics/miniproject2/LUA/: LuaScript.lua
robotics/miniproject2/src/: pathplanning.cpp
vision/miniproject1/image1/: CMakeLists.txt
vision/miniproject1/image1/src/: image1.cpp
vision/miniproject1/image2/: CMakeLists.txt
vision/miniproject1/image2/src/: image2.cpp
vision/miniproject1/image3/: CMakeLists.txt
vision/miniproject1/image3/src/: functions.h  image3.cpp
vision/miniproject1/image4_1/: CMakeLists.txt
vision/miniproject1/image4_1/src/: image4.cpp  image4_1.cpp
vision/miniproject1/image4_2/: CMakeLists.txt
vision/miniproject1/image4_2/src/: image4.cpp  image4_2.cpp
vision/miniproject1/image5/: CMakeLists.txt
vision/miniproject1/image5/src/: image5.cpp
vision/miniproject1/lib/: functions.h
